syntax = "proto3";

package kessel.inventory.v1beta1.resources;

import "buf/validate/validate.proto";

import "kessel/inventory/v1beta1/resources/k8s_cluster_detail.proto";
import "kessel/inventory/v1beta1/resources/metadata.proto";
import "kessel/inventory/v1beta1/resources/reporter_data.proto";

option go_package = "github.com/project-kessel/inventory-api/api/kessel/inventory/v1beta1/resources";
option java_multiple_files = true;
option java_package = "org.project_kessel.api.inventory.v1beta1.resources";
option java_outer_classname = "K8sClusterProto";

message K8sCluster {
  // Metadata about this resource
  Metadata metadata = 1;

  // Write only reporter specific data
  ReporterData reporter_data = 245278792 [ (buf.validate.field).required = true ];

  K8sClusterDetail resource_data = 2122698 [ (buf.validate.field).required = true ];
}
